--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,5 +1,10 @@
 {
-    "presets": [
-        "@babel/preset-env"
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": { "browsers": ["last 2 chrome versions"] }
+      }
     ]
+  ]
 }
